<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:logo="@drawable/logo_tanpatulisan"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_detect"
                android:visibility="visible"
                android:src="@drawable/baseline_photo_size_select_actual_24"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/button_camera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/camera" />

                <Button
                    android:id="@+id/button_gallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/gallery" />

            </LinearLayout>

            <Button
                android:id="@+id/button_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detect_nav"
                android:layout_marginTop="16dp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
