<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.result.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detection"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_photo_size_select_actual_24"
            android:contentDescription="@string/result_placeholder" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:padding="16dp">

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:text="@string/nama_penyakit"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:id="@+id/accuracy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/akurasi"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/text_titledesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:text="@string/description_placeholder" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/disease_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:text="@string/description_placeholder"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/text_titledesc" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_titlepreventif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:text="@string/prevention_placeholder" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/prevention_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:text="@string/prevention_placeholder"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
