<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/green"
    android:layout_margin="8dp"
    android:background="?attr/colorSurface"
    app:cardCornerRadius="16dp"
    app:elevation="4dp"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:text="@string/result_placeholder" />

            <TextView
                android:id="@+id/textViewConfidence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/confidence_placeholder" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_desc" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
